@@ -2,12 +2,12 @@
                          _|_ __|_ _ ._ _  
                           |_(_)|_(/_| | | 
 
-Totem is movie player for the Gnome desktop based on xine or GStreamer.
+Totem is movie player for the GNOME desktop based on xine or GStreamer.
 It features a playlist, a full-screen mode, seek and volume controls,
 as well as complete keyboard navigation.
 
-Apart from a movie player, it also includes a mozilla plugin and a
-nautilus thumbnailer and properties page.
+Apart from a movie player, it also includes a Mozilla plugin, and a
+Nautilus thumbnailer and properties page.
 
 News
 ====
@@ -109,7 +109,7 @@ Easy GStreamer plugin installation via libgimme-codec (optional)
 BUGS
 ====
 
-Bugs should be filed in Gnome's Bugzilla:
+Bugs should be filed in GNOME's Bugzilla:
 http://bugzilla.gnome.org/enter_bug.cgi?product=totem
 
 To get a better debug output, run:
