@@ -187,8 +187,8 @@
 	  <listitem>
 	    <para>Choose  
               <menuchoice>
-		<guisubmenu>Multimedia</guisubmenu>
-		<guimenuitem>&app;</guimenuitem>
+		<guisubmenu>Sound &amp; Video</guisubmenu>
+		<guimenuitem>Movie Player</guimenuitem>
 	      </menuchoice>. 
             </para>
 	  </listitem>
@@ -394,7 +394,7 @@
         <menuchoice>
 	  <guimenu>View</guimenu>
 	  <guimenuitem>Sidebar</guimenuitem></menuchoice> to make the sidebar
-	  appear, and choose <guimenu>Properties</guimenu> in the grop-down list.</para>
+	  appear, and choose <guimenu>Properties</guimenu> in the drop-down list.</para>
 	  <para>The dialog contains the following information:
         <variablelist>
 	  <varlistentry>
@@ -508,8 +508,8 @@
 	<listitem>
 	  <para>To zoom to full screen mode, choose
 	  <menuchoice><shortcut><keycap>F</keycap></shortcut>
-	  <guimenu>View</guimenu><guimenuitem>Fullscreen</guimenuitem></menuchoice>
-	  . To exit fullscreen mode, click on the
+	  <guimenu>View</guimenu><guimenuitem>Fullscreen</guimenuitem></menuchoice>.
+	  To exit fullscreen mode, click on the
 			<guibutton>Leave Fullscreen</guibutton> button or press
 			<keycap>Esc</keycap> or <keycap>F</keycap>.
           </para>
@@ -590,7 +590,7 @@
     </sect2>
 
     <sect2 id="totem-usage-on-top">
-      <title>To Make Window Always On Top</title>
+      <title>To Make the Window Always On Top</title>
       <para>To make the <application>&app;</application> window always on top of other application windows,
         choose
         <menuchoice>
@@ -624,7 +624,7 @@
     </sect2>
 
     <sect2 id="totem-usage-playlist">
-      <title>To Manage Playlist</title>
+      <title>To Manage the Playlist</title>
       <para>
         <itemizedlist>
 	  <listitem>
@@ -643,7 +643,7 @@
       </para>
 
       <sect3 id="totem-usage-playlist-show-hide">
-	<title>To Show or Hide Playlist</title>
+	<title>To Show or Hide the Playlist</title>
 	<para>To show playlist, choose 
           <menuchoice>
 	    <guimenu>View</guimenu><guimenuitem>Sidebar</guimenuitem>
@@ -657,7 +657,7 @@
       </sect3>
 
       <sect3 id="totem-usage-playlist-manage">
-	<title>Manage a PlayList</title>
+	<title>Manage a Playlist</title>
 	<para>You can use the <guilabel>Playlist</guilabel> dialog to do the following:
           <variablelist>
 	    <varlistentry>
@@ -721,7 +721,7 @@
     </sect2>
 
     <sect2 id="totem-usage-subtitle">
-	  <title>To Choose Subtitle</title>
+	  <title>To Choose Subtitles</title>
 	  <para>To choose
 	  the language of the subtitles, select
 	  <menuchoice><guimenu>View</guimenu><guisubmenu>Subtitles</guisubmenu></menuchoice>
@@ -737,27 +737,14 @@
 	</sect2>
 
     <sect2 id="totem-usage-take-screenshot">
-      <title>To Take Screenshot</title>
-      <para>To take screenshot of movie or visualisation of song that is playing, choose 
+      <title>To Take a Screenshot</title>
+      <para>To take a screenshot of the movie or visualisation that is playing, choose 
         <menuchoice>
           <guimenu>Edit</guimenu>
           <guimenuitem>Take Screenshot</guimenuitem>
-        </menuchoice>. The <guilabel>Save Screenshot</guilabel> dialog is displayed, click
-        the <guibutton>Save</guibutton> button to save the screenshot.
-      </para>
-      <para>You can save a screenshot to
-        <itemizedlist>
-          <listitem>
-	    <para>File: select the <guilabel>Save screenshot to file</guilabel> option,
-              then click on the <guibutton>Browse</guibutton> button to specify a file to save
-              the screenshot.
-            </para>
-          </listitem>
-	  <listitem>
-	    <para>The desktop: select the <guilabel>Save screenshot to the desktop</guilabel> option.
-            </para>
-	  </listitem>
-        </itemizedlist>
+        </menuchoice>. The <guilabel>Save Screenshot</guilabel> dialog is displayed, choose a location and
+	insert the filename you want to save the screenshot as, then click the <guibutton>Save</guibutton> button
+	to save the screenshot.
       </para>
     </sect2>
 
@@ -941,9 +928,9 @@
       Home Page</ulink>. 
     </para>
     <para>
-      To report a bug or make a suggestion regarding this application or
-      this manual, follow the directions in this 
-      <ulink url="ghelp:user-guide#feedback" type="help">document</ulink>.
+      To report a bug or make a suggestion regarding the &app; application or
+      this manual, follow the directions in the 
+      <ulink url="ghelp:user-guide#feedback" type="help">GNOME Feedback Page</ulink>. 
     </para>
     <para> This program is distributed under the terms of the GNU
       General Public license as published by the Free Software
