@@ -5,6 +5,7 @@
 [type: gettext/glade]data/playlist.ui
 [type: gettext/glade]data/plugins.ui
 [type: gettext/glade]data/properties.ui
+[type: gettext/glade]data/video-list.ui
 data/totem.desktop.in.in.in
 [type: gettext/glade]data/totem.ui
 data/totem.schemas.in
