@@ -1,3 +1,15 @@
+2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* C/totem.xml:
+	* en_GB/en_GB.po: Modified patch from Eero
+	Salokannel <epatic@pp.inet.fi> to fix documentation
+	for "Take Screenshot..." dialog. (Closes: #486466)
+	Wording changes to paragraphs about bug reporting.
+	(Closes: #497183)
+	Corrections to the documented menu path for Totem.
+	(Closes: #497182)
+	Fixed a typo and a whitespace issue. (Helps: #496647)
+
 2007-11-01  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es/es.po: Updated Spanish translation
