@@ -1,3 +1,7 @@
+2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* POTFILES.in: Add data/video-list.ui to POTFILES.in.
+
 2007-11-23  Urbančič Matej <mateju@svn.gnome.org>
 
 	* sl.po: Updates to Slovenian translation.
