@@ -1,5 +1,9 @@
 2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>
 
+	* README: Fix some capitalisation issues in the readme.
+
+2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>
+
 	Update svn:ignore properties.
 
 2007-11-25  Philip Withnall  <pwithnall@svn.gnome.org>
